# bandjacks

./: .env.example  .gitignore  CLAUDE.md  CODEBASE_REDUNDANCY_ANALYSIS.md  DOCUMENTATION_UPDATES.md  ENV_VARIABLES_FIX.md  EXTRACTION_IMPROVEMENTS_SUMMARY.md  FORCE_PUSH_INSTRUCTIONS.md  GIT_HISTORY_CLEANUP.md  GIT_HISTORY_CLEANUP_COMPLETE.md  GIT_HISTORY_SECURITY_SCAN.md  MERGE_OR_FORCE_PUSH_GUIDE.md  NEXT_STEPS_OPEN_SOURCE.md  OPEN_SOURCE_READINESS.md  OPTIMIZATIONS_SUMMARY.md  README.md  READY_TO_FORCE_PUSH.md  SECURITY_AUDIT_REPORT.md  SPRINT2_SUMMARY.md  TECHNIQUE_PHRASES_SUMMARY.md  check_openapi_compliance.py  cleanup_llm.py  complete_edge_embeddings.py  debug_extraction.py  docker-compose.yml  enhanced_extraction_test.json  extraction_results.json  fix_mobile_external_ids.py  job_result.json  main.py  monitor_embedding_progress.py  pyproject.toml  quick_test.py  test_darkcloud_full_pipeline.py  test_direct_consolidation.py  test_dynamic_config_api.py  test_enhanced_llm.py  test_entity_consolidation.py  test_entity_evidence.py  test_entity_review.py  (+18 more)
bandjacks/: __init__.py  config.py
batch_results/: batch_report_20250825_111641.json  batch_report_20250825_111641.md  batch_report_20251008_170130.json  batch_report_20251008_170130.md  batch_report_20251008_170306.json  batch_report_20251008_170306.md  batch_report_20251013_144756.json  batch_report_20251013_144756.md  batch_report_20251013_144924.json  batch_report_20251013_144924.md
data/: technique_pairs.json
docs/: API_ARCHITECTURE.md  API_DOCUMENTATION.md  ARCHITECTURE.md  ATTACKFLOW_GENERATION.md  README.md  (+41 more)
(+441 files in other folders)
